<resources>
    <string name="app_name">Descobrindo o mundo</string>
    <string name="btn_verificar">Verificar</string>
    <string name="btn_ajuda">Ajuda</string>
    <string name="btn_desistir">Desistir</string>
    <string name="txt_email">E-mail</string>
    <string name="txt_senha">Senha</string>
    <string name="txt_esqueci_minha_senha">Esqueci minha senha</string>
    <string name="btn_entrar">Entrar</string>
    <string name="btn_cadastre_se">Cadastre-se</string>
    <string name="img_perfil_descricao">Imagem para representar perfil</string>
</resources>