<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JogoNivel01">

    <FrameLayout
        android:id="@+id/fl_jogo_nivel_01"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/iv_jogo_nivel_01"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="top|center_horizontal"
            android:layout_marginTop="16dp" />

        <LinearLayout
            android:id="@+id/ll_jogo_nivel_01_encaixes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_jogo_nivel_01_encaixe_01"
                android:layout_width="95dp"
                android:layout_height="80dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:background="#FAD2D8DA"
                android:orientation="horizontal"
                android:paddingLeft="22dp"
                android:paddingTop="22dp"></LinearLayout>

            <LinearLayout
                android:id="@+id/ll_jogo_nivel_01_encaixe_02"
                android:layout_width="95dp"
                android:layout_height="80dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:background="#FAD2D8DA"
                android:orientation="horizontal"
                android:paddingLeft="22dp"
                android:paddingTop="22dp"></LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_jogo_nivel_01_silabas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal|center_vertical"
            android:layout_marginTop="128dp"
            android:background="#FAD2D8DA"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_jogo_nivel_01_slb_01"
                android:layout_width="46dp"
                android:layout_height="32dp"
                android:paddingTop="8dp"
                android:text=""
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tv_jogo_nivel_01_slb_02"
                android:layout_width="46dp"
                android:layout_height="32dp"
                android:paddingTop="8dp"
                android:text=""
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tv_jogo_nivel_01_slb_03"
                android:layout_width="46dp"
                android:layout_height="32dp"
                android:paddingTop="8dp"
                android:text=""
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tv_jogo_nivel_01_slb_04"
                android:layout_width="46dp"
                android:layout_height="32dp"
                android:paddingTop="8dp"
                android:text=""
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_jogo_nivel_01_botoes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="60dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_jogo_nivel_01_botoes_verificar_ajuda"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_jogo_nivel_01_verificar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="3dp"
                    android:layout_weight="1"
                    android:background="@android:color/holo_green_light"
                    android:text="@string/btn_verificar"
                    android:textColor="@color/ltBranco" />

                <Button
                    android:id="@+id/btn_jogo_nivel_01_ajuda"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="1"
                    android:background="@color/ltAzul"
                    android:text="@string/btn_ajuda"
                    android:textColor="@color/ltBranco" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_jogo_nivel_01_desistir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_red_dark"
                android:text="@string/btn_desistir"
                android:textColor="@color/ltBranco" />

        </LinearLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>